// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/SystemNotice should match snapshot for admin, admin notice 1`] = `
<div
  className="system-notice"
>
  <img
    className="system-notice-icon"
    src={null}
  />
  <div
    className="system-notice-title"
  >
    some title
  </div>
  <div
    className="system-notice-body"
  >
    some body
  </div>
  <button
    className="system-notice-button left"
    id="systemnotice_remindme"
    onClick={[Function]}
  >
    <FormattedMessage
      defaultMessage="Remind me later"
      id="system_notice_remind_me"
      values={Object {}}
    />
  </button>
  <button
    className="system-notice-button right"
    id="systemnotice_dontshow"
    onClick={[Function]}
  >
    <FormattedMessage
      defaultMessage="Don't show again"
      id="system_notice_dont_show"
      values={Object {}}
    />
  </button>
</div>
`;

exports[`components/SystemNotice should match snapshot for admin, regular notice 1`] = `
<div
  className="system-notice"
>
  <img
    className="system-notice-icon"
    src={null}
  />
  <div
    className="system-notice-title"
  >
    some title
  </div>
  <div
    className="system-notice-body"
  >
    some body
  </div>
  <button
    className="system-notice-button left"
    id="systemnotice_remindme"
    onClick={[Function]}
  >
    <FormattedMessage
      defaultMessage="Remind me later"
      id="system_notice_remind_me"
      values={Object {}}
    />
  </button>
  <button
    className="system-notice-button right"
    id="systemnotice_dontshow"
    onClick={[Function]}
  >
    <FormattedMessage
      defaultMessage="Don't show again"
      id="system_notice_dont_show"
      values={Object {}}
    />
  </button>
</div>
`;

exports[`components/SystemNotice should match snapshot for regular user, admin and regular notice 1`] = `
<div
  className="system-notice"
>
  <img
    className="system-notice-icon"
    src={null}
  />
  <div
    className="system-notice-title"
  >
    some title2
  </div>
  <div
    className="system-notice-body"
  >
    some body2
  </div>
  <button
    className="system-notice-button left"
    id="systemnotice_remindme"
    onClick={[Function]}
  >
    <FormattedMessage
      defaultMessage="Remind me later"
      id="system_notice_remind_me"
      values={Object {}}
    />
  </button>
  <button
    className="system-notice-button right"
    id="systemnotice_dontshow"
    onClick={[Function]}
  >
    <FormattedMessage
      defaultMessage="Don't show again"
      id="system_notice_dont_show"
      values={Object {}}
    />
  </button>
</div>
`;

exports[`components/SystemNotice should match snapshot for regular user, admin notice 1`] = `""`;

exports[`components/SystemNotice should match snapshot for regular user, dismissed notice 1`] = `""`;

exports[`components/SystemNotice should match snapshot for regular user, dont show again notice 1`] = `""`;

exports[`components/SystemNotice should match snapshot for regular user, no notice 1`] = `""`;

exports[`components/SystemNotice should match snapshot for regular user, regular notice 1`] = `
<div
  className="system-notice"
>
  <img
    className="system-notice-icon"
    src={null}
  />
  <div
    className="system-notice-title"
  >
    some title
  </div>
  <div
    className="system-notice-body"
  >
    some body
  </div>
  <button
    className="system-notice-button left"
    id="systemnotice_remindme"
    onClick={[Function]}
  >
    <FormattedMessage
      defaultMessage="Remind me later"
      id="system_notice_remind_me"
      values={Object {}}
    />
  </button>
  <button
    className="system-notice-button right"
    id="systemnotice_dontshow"
    onClick={[Function]}
  >
    <FormattedMessage
      defaultMessage="Don't show again"
      id="system_notice_dont_show"
      values={Object {}}
    />
  </button>
</div>
`;
